HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeRecordGenericUnbounded/Expected.uv
//! Expected diagnostic metadata for the FfiSafeRecordGenericUnbounded rejected-source specimen.

expectedDiagnostic("E-TYP-2629", "rule.23.FfiSafe-Record-Generic-Unbounded-Err")
